[package]
name = "udpfwd"
version = "0.1.0"
edition = "2018"
publish = ["metaswitch"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }
async-udp-stream = { path = "../async-udp-stream" }
bidirectional-channel = "0.3.1"
derive_more = "0.99.16"
evmap = "10.0.2"
futures = "0.3.15"
